nginx/netflix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-app
  namespace: demo-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-app
  template:
    metadata:
      labels:
        app: netflix-app
    spec:
      containers:
      - name: netflix-app
        image: manidevops2021/netflix:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-app
  namespace: demo-apps
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: netflix-app
